# kokoro-rs

./: .geminiignore  .gitignore  Cargo.toml  GEMINI.md  README.md
.beads/: metadata.json
.github/workflows/: rust.yml
assets/: README.md  voices.json
docs/: customizing_voices_and_lexicons.md  evaluating_tts.md  prompting.md  releasing_to_crates_io.md
scripts/: setup_models.sh
src/: main.rs
src/cli/: mod.rs
src/tts/: mod.rs
