[package]
name = "kokoro-cli"
version = "0.1.0"
edition = "2021"
description = "A native Rust CLI for Kokoro TTS using XDG standards and agent-first design"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
hound = "3.5"
# Future additions for native inference and G2P parity:
misaki-rs = "0.3.0"
ort = { version = "2.0.0-rc.9", features = ["ndarray"] }
ndarray = "0.15"
anyhow = "1.0"
